--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bookmarker</title>
 
+    <!-- Font -->
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Caption:wght@400;700&family=Pacifico&family=Righteous&display=swap" rel="stylesheet">
+    
     <!-- favicon -->
     <link rel="icon" href="./Assets/Images/bookmark.png">
 
@@ -22,36 +25,35 @@
 
   </head>
   <body>
-    <h1>Bookmarker</h1>
-    <div class="container">
-      <div class="form">
+    <div class="container py-5 d-flex flex-column justify-content-center align-items-center">
+      <h1 class="py-2 position-relative">Bookmarker</h1>
+      <div class="form w-100 p-3 py-4 mt-5 d-flex flex-column justify-content-center align-items-center gap-4">
         <h2>
           <i class="fa-solid fa-bookmark"></i> Bookmark your favorite sites
           <i class="fa-solid fa-bookmark"></i>
         </h2>
 
-        <div class="siteName">
-          <label for="siteName"><i class="fa-solid fa-book-bookmark"></i> Site Name</label>
-          <input type="text" id="siteName" required />
+        <div class="siteName w-100 d-flex flex-column justify-content-center">
+          <label for="siteName" class="pb-2 fw-semibold"><i class="fa-solid fa-book-bookmark pe-2"></i> Site Name</label>
+          <input type="text" id="siteName" class="form-control" required placeholder="Bookmark Name"/>
         </div>
 
-        <div class="siteURL">
-          <label for="siteURL"><i class="fa-solid fa-link"></i> Site URL</label>
-          <input type="url" id="siteURL" required />
+        <div class="siteURL w-100 d-flex flex-column justify-content-center">
+          <label for="siteURL" class="pb-2 fw-semibold"><i class="fa-solid fa-link pe-2"></i>Site URL</label>
+          <input type="url" id="siteURL" class="form-control" required placeholder="Website URL"/>
         </div>
 
-        <button id="submit">Submit</button>
-        <button id="validate">validate</button>
+        <button id="submit" class="btn btn-submit px-5">Submit</button>
       </div>
 
-      <div class="table">
+      <div class="table mt-4 text-center bg-light">
         <table>
           <thead>
             <tr>
-              <th>Index</th>
-              <th>Website Name</th>
-              <th>Visit</th>
-              <th>Delete</th>
+              <th class="text-capitalize">Index</th>
+              <th class="text-capitalize">Website Name</th>
+              <th class="text-capitalize">Visit</th>
+              <th class="text-capitalize">Delete</th>
             </tr>
           </thead>
           <tbody id="tableBody"></tbody>
