forth commit try fix css

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <link rel="icon" href="./Assets/Images/bookmark.png">
 
     <!-- font awesome -->
-    <link rel="stylesheet" href="./css/all.min.css">
+    <link rel="stylesheet" href="./style/all.min.css">
 
     <!-- bootstrap -->
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./style/bootstrap.min.css">
 
     <!-- main style -->
-    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
 
   </head>
   <body>
